<resources>
    <string name="app_name">LEADERBOARD</string>
    <string name="error_message">Error when loading data, internet may not be connected</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="image_holder">Image holder</string>
    <string name="submit">Submit</string>
    <string name="project_submission">
            <u>Project Submission</u>
    </string>
    <string name="first_name">First Name</string>
    <string name="project_on_github_link">Project on Github (link)</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="full_name">Full Name</string>
    <string name="hours_country">Hours, Country</string>
    <string name="skilliq_country">SkillIq, Country</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_cancelled">Submission Cancelled</string>
</resources>