<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_img">

        <include
            android:id="@+id/include"
            layout="@layout/tool_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/first_name"
            style="@style/ColourText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/text_field_color"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:padding="10dp"
            app:layout_constraintEnd_toStartOf="@+id/last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/last_name"
            style="@style/ColourText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/text_field_color"
            android:hint="@string/last_name"
            android:padding="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/first_name"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email_address"
            style="@style/ColourText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:background="@drawable/text_field_color"
            android:hint="@string/email_address"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_name" />

        <EditText
            android:id="@+id/git_hub_link"
            style="@style/ColourText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:background="@drawable/text_field_color"
            android:hint="@string/project_on_github_link"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_address" />

        <Button
            android:id="@+id/button"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/buttonshape_orange"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/git_hub_link" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>